[package]
name = "regreddit"
version = "0.1.1"
authors = ["Yage Hu <yagehu@qq.com>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/yagehu/regreddit"
description = "A command line tool that deletes things from your Reddit account."
license = "GPL-3.0-or-later"
keywords = ["cli", "reddit"]
categories = ["command-line-utilities"]

[dependencies]
async-trait = "0.1.27"
clap = "2.33.0"
config = "0.10.1"
futures = "0.3.4"
log = "0.4.8"
log4rs = "0.11.0"
reqwest = { version = "0.10.4", features = ["json"] }
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.50"
tokio = { version = "0.2.13", features = ["full"] }
url = { version = "2.1.1", features = ["serde"] }

